--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>Startpage</title>
@@ -6,19 +7,25 @@
     <link href="icon.png" rel="icon">
   </head>
   <body>
-    <div class="center">
-      <img src="icon.png">
-      <h1 class="center__msg">WELCOME</h1>
-    </div>
+    <section class="center">
+			<div class="center__time">
+				<span class="center__clock center__clock--timezone">GMT+5<span class="center__clock" id="clock--home">00:00:00</span></span>
+				<span class="center__clock center__clock--timezone">GMT+3<span class="center__clock" id="clock--Moscow">00:00:00</span></span>
+			</div>
+			<figure>
+				<img src="icon.png">
+				<figcaption>WELCOME</figcaption>
+			</figure>
+    </section>
     <!-- | BOOKMARKS | -->
     <section class="bookmrks">
       <div class="bookmrks__container">
         <h1 class="bookmrks__header">&#187;WORK</h1>
         <nav class="bookmrks__nav">
-          <a href="https://teacher.skyeng.ru/teacherCabinet" target="_blank" class="bookmrks__link">Skyeng</a>
-          <a href="https://app.slack.com/client/T03A3SUFB/CGK66EGRJ" target="_blank" class="bookmrks__link">Slack (Skyeng)</a>
+					<a href="https://teacher.skyeng.ru/teacherCabinet" target="_blank" class="bookmrks__link"><img class="bookmrks_ico" src="https://skyeng.ru/favicon.ico"/>Skyeng</a>
+          <a href="https://app.slack.com/client/T03A3SUFB/CGK66EGRJ" target="_blank" class="bookmrks__link" id="bookmrks__link">Slack (Skyeng)</a>
           <a href="https://mail.yandex.ru/?uid=1130000036592417#inbox" target="_blank" class="bookmrks__link">Mail</a>
-          <a href="https://www.notion.so/Skyeng-f238f2f0b0d04c1b877061d7d4e6e94b" target="_blank" class="bookmrks__link">Inside Jobs</a>
+          <a href="https://www.notion.so/Skyeng-f238}f2f0b0d04c1b877061d7d4e6e94b" target="_blank" class="bookmrks__link">Inside Jobs</a>
           <!-- <a href="#" target="_blank" class="bookmrks__link">link</a> -->
         </nav>
       </div>
@@ -53,5 +60,6 @@
         </nav>
       </div>
     </section>
+		<script type="text/javascript" src="clock.js"></script>
   </body>
 </html>
