--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
       <div class="bookmrks__container">
         <h1 class="bookmrks__header">&#187;WORK</h1>
         <nav class="bookmrks__nav">
-					<a href="https://teacher.skyeng.ru/teacherCabinet" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src="https://skyeng.ru/favicon.ico"/>Skyeng</a>
-					<a href="https://app.slack.com/client/T03A3SUFB/CGK66EGRJ" target="_blank" class="bookmrks__link" id="bookmrks__link"><img class="bookmrks__ico" id="test__ico" src=""/>Slack (Skyeng)</a>
-          <a href="https://mail.yandex.ru/?uid=1130000036592417#inbox" target="_blank" class="bookmrks__link">Mail</a>
-          <a href="https://www.notion.so/Skyeng-f238}f2f0b0d04c1b877061d7d4e6e94b" target="_blank" class="bookmrks__link">Inside Jobs</a>
+					<a href="https://teacher.skyeng.ru/teacherCabinet" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>Skyeng</a>
+					<a href="https://app.slack.com/client/T03A3SUFB/CGK66EGRJ" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>Slack (Skyeng)</a>
+					<a href="https://mail.yandex.ru/?uid=1130000036592417#inbox" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>Mail</a>
+          <a href="https://www.notion.so/Skyeng-f238}f2f0b0d04c1b877061d7d4e6e94b" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>Inside Jobs</a>
           <!-- <a href="#" target="_blank" class="bookmrks__link">link</a> -->
         </nav>
       </div>
       <div class="bookmrks__container">
         <h1 class="bookmrks__header">&#187;IT</h1>
         <nav class="bookmrks__nav">
-          <a href="https://www.w3schools.com/" target="_blank" class="bookmrks__link">W3 Schools</a>
-          <a href="https://github.com/" target="_blank" class="bookmrks__link">Github</a>
-          <a href="https://developer.mozilla.org/en-US/" target="_blank" class="bookmrks__link">MDN Web Docs</a>
-          <a href="https://www.codecademy.com/learn" target="_blank" class="bookmrks__link">Codecademy</a>
-          <a href="https://www.freecodecamp.org/" target="_blank" class="bookmrks__link">freecodecamp</a>
-          <a href="https://internetingishard.com/html-and-css/" target="_blank" class="bookmrks__link">HTML & CSS is hard</a>
-          <a href="https://repl.it/~" target="_blank" class="bookmrks__link">repl.it</a>
+          <a href="https://www.w3schools.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>W3 Schools</a>
+          <a href="https://github.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>Github</a>
+          <a href="https://developer.mozilla.org/en-US/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>MDN Web Docs</a>
+          <a href="https://www.codecademy.com/learn" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>Codecademy</a>
+          <a href="https://www.freecodecamp.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>freecodecamp</a>
+          <a href="https://internetingishard.com/html-and-css/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>HTML & CSS is hard</a>
+          <a href="https://repl.it/~" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>repl.it</a>
         </nav>
       </div>
       <div class="bookmrks__container">
         <h1 class="bookmrks__header">&#187;SOCIAL</h1>
         <nav class="bookmrks__nav">
-          <a href="https://www.reddit.com/" target="_blank" class="bookmrks__link">reddit</a>
-          <a href="http://twitter.com/" target="_blank" class="bookmrks__link">twitter</a>
-          <a href="http://vk.com/" target="_blank" class="bookmrks__link">VKontakte</a>
+          <a href="https://www.reddit.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>reddit</a>
+          <a href="http://twitter.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>twitter</a>
+          <a href="http://vk.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=""/>VKontakte</a>
           <a href="#" target="_blank" class="bookmrks__link">link</a>
         </nav>
       </div>
