--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>Startpage</title>
     <link href="main.css" rel="stylesheet" type="text/css">
-    <link href="icon.png" rel="icon">
+    <link href="cntr.png" rel="icon">
 </head>
 
 <body>
