hover for links

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <nav class="bookmrks__nav">
           <a href="http://youtube.ru/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>YouTube</a>
           <a href="https://www.deezer.com/us/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Deezer</a>
-          <a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
+          <a href="https://www.hltv.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>HLTV</a>
           <a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
 				</nav>
 			</div>
