New container and more links.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <a href="http://twitter.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>twitter</a>
           <a href="http://vk.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>VKontakte</a>
           <a href="https://discordapp.com/channels/@me" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>discord</a>
+					<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Cyberpunk 2077 Forums</a>
         </nav>
       </div>
       <div class="bookmrks__container">
@@ -75,9 +76,20 @@
           <a href="http://youtube.ru/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>YouTube</a>
           <a href="https://www.deezer.com/us/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Deezer</a>
           <a href="https://www.hltv.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>HLTV</a>
-          <a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
+					<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
 				</nav>
 			</div>
+      <div class="bookmrks__container">
+        <h1 class="bookmrks__header">&#187;GAMES</h1>
+        <nav class="bookmrks__nav">
+					<a href="https://riskofrain2.gamepedia.com/Risk_of_Rain_2_Wiki" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Risk of Rain 2 Wiki</a>
+					<a href="https://enterthegungeon.gamepedia.com/Enter_the_Gungeon_Wiki" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Enter the Gungeon Wiki</a>
+					<a href="https://bindingofisaacrebirth.gamepedia.com/Binding_of_Isaac:_Rebirth_Wiki" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>The Binding of Isaac Wiki</a>
+					<a href="https://platinumgod.co.uk/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Platinum God</a>
+					<a href="https://www.gog.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>GOG.com</a>
+					<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Slayer's Club</a>
+        </nav>
+      </div>
     </section>
     <script type="text/javascript" src="clock.js"></script>
 </body>
