Fixed a broken bookmark.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<a href="https://bindingofisaacrebirth.gamepedia.com/Binding_of_Isaac:_Rebirth_Wiki" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>The Binding of Isaac Wiki</a>
 					<a href="https://platinumgod.co.uk/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Platinum God</a>
 					<a href="https://www.gog.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>GOG.com</a>
-					<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Slayer's Club</a>
+					<a href="https://slayersclub.bethesda.net/en" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Slayer's Club</a>
         </nav>
       </div>
     </section>
