--- a/index.html
+++ b/index.html
@@ -79,20 +79,25 @@
 					<a href="https://platinumgod.co.uk/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Platinum God</a>
 					<a href="https://www.gog.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>GOG.com</a>
 					<a href="https://slayersclub.bethesda.net/en" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Slayer's Club</a>
+					<a href="https://www.hltv.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>HLTV</a>
         </nav>
       </div>
       <div class="bookmrks__container">
         <h1 class="bookmrks__header">&#187;MISC</h1>
         <nav class="bookmrks__nav">
 					<a href="https://netflix.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Netflix</a>
+					<a href="https://www.twitch.tv/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>twitch.tv</>
           <a href="http://youtube.ru/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>YouTube</a>
           <a href="https://www.deezer.com/us/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Deezer</a>
-          <a href="https://www.hltv.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>HLTV</a>
 					<a href="http://www.scp-wiki.net/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>SCP Foundation</a>
 					<a href=https://forums.cdprojektred.com/index.php?threads/countdown-to-the-dark-future-a-year-of-cyberpunk-lore.11011846/"" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Countdown to the Dark Future</a>
-					<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
 				</nav>
 			</div>
+
+			<!-- | LINK TEMPLATE - EDIT AND PASTE TO A CATEGORY ABOVE |
+			<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
+			-->
+
     </section>
     <script type="text/javascript" src="clock.js"></script>
 </body>
