--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <section class="center">
+			<iframe src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" style="overflow:hidden;margin:0;padding:0;width:408px;height:40px;" frameborder="0"></iframe>
 			<div class="center__time">
 				<span class="center__clock center__clock--timezone">GMT+5 <span class="center__clock--time" id="clock--home">00:00:00</span></span>
 				<span class="center__clock center__clock--timezone">GMT+3 <span class="center__clock--time" id="clock--Moscow">00:00:00</span></span>
