--- a/index.html
+++ b/index.html
@@ -91,12 +91,17 @@
           <a href="http://youtube.ru/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>YouTube</a>
           <a href="https://www.deezer.com/us/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Deezer</a>
 					<a href="http://www.scp-wiki.net/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>SCP Foundation</a>
-					<a href=https://forums.cdprojektred.com/index.php?threads/countdown-to-the-dark-future-a-year-of-cyberpunk-lore.11011846/"" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Countdown to the Dark Future</a>
 				</nav>
 			</div>
 
 			<!-- | LINK TEMPLATE - EDIT AND PASTE TO A CATEGORY ABOVE |
 			<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
+			-->
+
+			<!-- | NOT IN USE |
+
+		  <a href=https://forums.cdprojektred.com/index.php?threads/countdown-to-the-dark-future-a-year-of-cyberpunk-lore.11011846/"" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Countdown to the Dark Future</a>
+
 			-->
 
     </section>
