--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<span class="center__clock center__clock--timezone">GMT+3 <span class="center__clock--time" id="clock--Moscow">00:00:00</span></span>
 			</div>
 			<figure>
-				<img src="cntr.png">
+				<img src="cntrCP77.png">
 			</figure>
 			<div class="calc__container">
 				<form class="calc__form">
