Visual edits to get hyped before CP77 release

--- a/index.html
+++ b/index.html
@@ -1,79 +1,76 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-    <title>Startpage</title>
-    <link href="main.css" rel="stylesheet" type="text/css">
-    <link href="favicon.ico" rel="icon">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
-
-<body>
-    <section class="center">
+	<head>
+		<title>Startpage</title>
+		<link href="main.css" rel="stylesheet" type="text/css">
+		<link href="favicon.ico" rel="icon">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	</head>
+	<body>
+		<section class="center">
 			<div class="center__time">
-				<span class="center__clock center__clock--timezone">GMT+5 <span class="center__clock--time" id="clock--home">00:00:00</span></span>
-				<span class="center__clock center__clock--timezone">GMT+3 <span class="center__clock--time" id="clock--Moscow">00:00:00</span></span>
+        <span class="center__clock center__clock--timezone">GMT+5 <span class="center__clock--time" id="clock--home">00:00:00</span></span>
+        <span class="center__clock center__clock--timezone">GMT+3 <span class="center__clock--time" id="clock--Moscow">00:00:00</span></span>
 			</div>
 			<figure>
 				<img src="cntrCP77.png">
 			</figure>
 			<div class="calc__container">
 				<form class="calc__form">
-					<table class="calc__table">
-						<tr class="calc__row">
-							<td><input id="money" autocomplete="off" type="text" oninput="calc()"></td>
-							<th>MONEY</th>
-						</tr>
-						<tr class="calc__row">
-							<td><input id="lessons" autocomplete="off" type="text" oninput="calc()"></td>
-							<th>LESSONS</th>
-						</tr>
-						<tr class="calc__row">
-							<td><input id="total" autocomplete="off" disabled type="text" value="0" oninput="calc()"></td>
-							<th>TOTAL</th>
-						</tr>
-					</table>
+				<table class="calc__table">
+					<tr class="calc__row">
+						<td><input id="money" autocomplete="off" type="text" oninput="calc()"></td>
+						<th>MONEY</th>
+					</tr>
+					<tr class="calc__row">
+						<td><input id="lessons" autocomplete="off" type="text" oninput="calc()"></td>
+						<th>LESSONS</th>
+					</tr>
+					<tr class="calc__row">
+						<td><input id="total" autocomplete="off" disabled type="text" value="0" oninput="calc()"></td>
+						<th>TOTAL</th>
+					</tr>
+				</table>
 				<form>
 			</div>
-    </section>
-    <!-- | BOOKMARKS | -->
-    <section class="bookmrks">
-      <div class="bookmrks__container">
-        <h1 class="bookmrks__header">&#187;WORK</h1>
-        <nav class="bookmrks__nav">
+		</section>
+		<!-- | BOOKMARKS | -->
+		<section class="bookmrks">
+			<div class="bookmrks__container">
+				<h1 class="bookmrks__header">&#187;WORK</h1>
+				<nav class="bookmrks__nav">
 					<a href="https://teacher.skyeng.ru/teacherCabinet" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Skyeng</a>
 					<a href="https://app.slack.com/client/T03A3SUFB/CGK66EGRJ" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Slack (Skyeng)</a>
 					<a href="https://mail.yandex.ru/?uid=1130000036592417#inbox" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Mail</a>
-          <!-- <a href="#" target="_blank" class="bookmrks__link">link</a> -->
-        </nav>
-      </div>
-      <div class="bookmrks__container">
-        <h1 class="bookmrks__header">&#187;IT</h1>
-        <nav class="bookmrks__nav">
-          <a href="https://www.w3schools.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>W3 Schools</a>
-          <a href="https://github.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Github</a>
-          <a href="https://developer.mozilla.org/en-US/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>MDN Web Docs</a>
-          <a href="https://www.codecademy.com/learn" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Codecademy</a>
-          <a href="https://www.freecodecamp.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>freecodecamp</a>
-          <a href="https://internetingishard.com/html-and-css/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>HTML & CSS is hard</a>
-          <a href="https://repl.it/~" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>repl.it</a>
+					<!-- <a href="#" target="_blank" class="bookmrks__link">link</a> -->
+				</nav>
+			</div>
+			<div class="bookmrks__container">
+				<h1 class="bookmrks__header">&#187;IT</h1>
+				<nav class="bookmrks__nav">
+					<a href="https://www.w3schools.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>W3 Schools</a>
+					<a href="https://github.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Github</a>
+					<a href="https://developer.mozilla.org/en-US/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>MDN Web Docs</a>
+					<a href="https://www.codecademy.com/learn" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Codecademy</a>
+					<a href="https://www.freecodecamp.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>freecodecamp</a>
+					<a href="https://internetingishard.com/html-and-css/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>HTML & CSS is hard</a>
+					<a href="https://repl.it/~" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>repl.it</a>
 					<a href="https://theodinproject.com/dashboard" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>TOP</a>
-        </nav>
-      </div>
-      <div class="bookmrks__container">
-        <h1 class="bookmrks__header">&#187;SOCIAL</h1>
-        <nav class="bookmrks__nav">
-          <a href="https://www.reddit.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>reddit</a>
-          <a href="http://twitter.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>twitter</a>
-          <a href="http://vk.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>VKontakte</a>
-          <a href="https://discordapp.com/channels/@me" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>discord</a>
+				</nav>
+			</div>
+			<div class="bookmrks__container">
+				<h1 class="bookmrks__header">&#187;SOCIAL</h1>
+				<nav class="bookmrks__nav">
+					<a href="https://www.reddit.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>reddit</a>
+					<a href="http://twitter.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>twitter</a>
+					<a href="http://m.vk.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>VKontakte</a>
+					<a href="https://discordapp.com/channels/@me" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>discord</a>
 					<a href="https://forums.cdprojektred.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Cyberpunk 2077 Forums</a>
-        </nav>
-      </div>
-      <div class="bookmrks__container">
-        <h1 class="bookmrks__header">&#187;GAMES</h1>
-        <nav class="bookmrks__nav">
+				</nav>
+			</div>
+			<div class="bookmrks__container">
+				<h1 class="bookmrks__header">&#187;GAMES</h1>
+				<nav class="bookmrks__nav">
 					<a href="https://riskofrain2.gamepedia.com/Risk_of_Rain_2_Wiki" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Risk of Rain 2 Wiki</a>
 					<a href="https://enterthegungeon.gamepedia.com/Enter_the_Gungeon_Wiki" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Enter the Gungeon Wiki</a>
 					<a href="https://bindingofisaacrebirth.gamepedia.com/Binding_of_Isaac:_Rebirth_Wiki" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>The Binding of Isaac Wiki</a>
@@ -81,32 +78,29 @@
 					<a href="https://www.gog.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>GOG.com</a>
 					<a href="https://slayersclub.bethesda.net/en" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Slayer's Club</a>
 					<a href="https://www.hltv.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>HLTV</a>
-        </nav>
-      </div>
-      <div class="bookmrks__container">
-        <h1 class="bookmrks__header">&#187;MISC</h1>
-        <nav class="bookmrks__nav">
+				</nav>
+			</div>
+			<div class="bookmrks__container">
+				<h1 class="bookmrks__header">&#187;MISC</h1>
+				<nav class="bookmrks__nav">
 					<a href="https://netflix.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Netflix</a>
 					<a href="https://www.twitch.tv/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>twitch.tv</>
-          <a href="http://youtube.ru/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>YouTube</a>
-          <a href="https://www.deezer.com/us/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Deezer</a>
+					<a href="http://youtube.ru/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>YouTube</a>
+          <a href="http://open.spotify.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Spotify</a>
+
+					<a href="https://www.deezer.com/us/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Deezer</a>
 					<a href="http://www.scp-wiki.net/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>SCP Foundation</a>
 				</nav>
 			</div>
-
 			<!-- | LINK TEMPLATE - EDIT AND PASTE TO A CATEGORY ABOVE |
-			<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
-			-->
-
+				<a href="#" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>link</a>
+				-->
 			<!-- | NOT IN USE |
-
-		  <a href=https://forums.cdprojektred.com/index.php?threads/countdown-to-the-dark-future-a-year-of-cyberpunk-lore.11011846/"" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Countdown to the Dark Future</a>
-
-			-->
-
-    </section>
-    <script type="text/javascript" src="clock.js"></script>
-</body>
-
+				<a href=https://forums.cdprojektred.com/index.php?threads/countdown-to-the-dark-future-a-year-of-cyberpunk-lore.11011846/"" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Countdown to the Dark Future</a>
+				
+				-->
+		</section>
+		<script type="text/javascript" src="clock.js"></script>
+	</body>
 </html>
 <!-- -->
