Changed name: Cyberpunk 2077 --> CP77

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<a href="http://twitter.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>twitter</a>
 					<a href="http://m.vk.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>VKontakte</a>
 					<a href="https://discordapp.com/channels/@me" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>discord</a>
-					<a href="https://forums.cdprojektred.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Cyberpunk 2077 Forums</a>
+					<a href="https://forums.cdprojektred.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>CP77 Forums</a>
 				</nav>
 			</div>
 			<div class="bookmrks__container">
