--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<h1 class="bookmrks__header">&#187;IT</h1>
 				<nav class="bookmrks__nav">
 					<a href="https://www.w3schools.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>W3 Schools</a>
-					<a href="https://github.com/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Github</a>
+					<a href="https://github.com/LP5" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Github</a>
 					<a href="https://developer.mozilla.org/en-US/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>MDN Web Docs</a>
 					<a href="https://www.codecademy.com/learn" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>Codecademy</a>
 					<a href="https://www.freecodecamp.org/" target="_blank" class="bookmrks__link"><img class="bookmrks__ico" src=" "/>freecodecamp</a>
